# OmniKey

./: .gitignore  Cargo.toml
src/: displays.rs  error.rs  generate.rs  generator.rs  key.rs  key_set.rs  keys.rs  keyset.rs  keyset_ssh.rs  keyset_wireguard.rs  lib.rs  main.rs  preshared_key.rs  private_key.rs  public_key.rs  ssh_key_set.rs  wireguard_key_set.rs  writer.rs
test_output/: id_ed25519_test  id_ed25519_test.pub  wg_private.key  wg_public.key
